// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media List renders with custom layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-1 {
  margin-bottom: 120px;
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-3 {
    margin: -12px -4px 0 -4px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -12px -4px 0 -4px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -12px -4px 0 -4px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -12px -8px 0 -8px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -12px -8px 0 -8px;
  }
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    margin-top: 12px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #EBEBEB;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-5:hover:not(:disabled) {
  box-shadow: 0 2px 4px 0 rgba(40,41,61,0.04),0 8px 16px 0 rgba(96,97,112,0.16);
}

.emotion-6 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    min-height: 1px;
  }
}

.emotion-7 {
  width: 100%;
}

.emotion-8 {
  border-radius: 8px;
  position: relative;
  width: 100%;
  padding-top: 66%;
  height: 0;
  border-radius: 8px;
  background-color: #F4F4F4;
}

.emotion-8 svg {
  fill: #BBC3C9;
}

.emotion-9 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-10 {
  display: none;
  height: auto;
  width: 100%;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
  border-radius: inherit;
}

.emotion-11 {
  box-sizing: border-box;
}

.emotion-12 {
  box-sizing: border-box;
  color: inherit;
  padding: 24px;
}

.emotion-12 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-13 {
  margin-bottom: 20px;
}

.emotion-14 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-14 .nk-headline-kicker {
  color: #577FFB;
}

.emotion-14:hover:not(:disabled) .nk-headline-kicker {
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:active:not(:disabled) .nk-headline-kicker {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:visited:not(:disabled) .nk-headline-kicker {
  color: #503B8C;
}

.emotion-14 .nk-headline-heading {
  color: #162740;
}

.emotion-14 .nk-headline-heading svg {
  fill: #162740;
}

.emotion-14:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-15 {
  font-family: 'Poppins',sans-serif;
  font-size: 24px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.30104166666666665em;
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.44166666666666665em;
}

.emotion-16 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-16 svg {
  fill: #162740;
}

.emotion-17 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-17 svg {
  fill: #555E74;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.415625em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.446875em;
}

.emotion-18 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-18 {
    padding: 0 8px;
    margin-top: 12px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-18 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-18 {
    padding: 0 12px;
  }
}

.emotion-19 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-21 {
  box-sizing: border-box;
  color: inherit;
  padding: 8px 4px;
}

.emotion-21 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    />
                    <img
                      alt="Card Media"
                      class="emotion-10"
                      src="/static/placeholder-16x9.png"
                    />
                  </div>
                </div>
              </div>
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-12"
                >
                  <div
                    class="emotion-13"
                  >
                    <a
                      class="nk-card-link emotion-14"
                      href="/"
                    >
                      <section
                        class="emotion-15"
                      >
                        <h1
                          class="nk-headline-heading emotion-16"
                        />
                      </section>
                    </a>
                  </div>
                  <p
                    class="emotion-17"
                  >
                    interactive card
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-18"
          >
            <div
              class="emotion-19"
            >
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-21"
                >
                  <div
                    class="emotion-13"
                  >
                    <section
                      class="emotion-15"
                    >
                      <h1
                        class="nk-headline-heading emotion-16"
                      >
                        static
                      </h1>
                    </section>
                  </div>
                  <p
                    class="emotion-17"
                  >
                    card with optional title 
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media List renders with default layout 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-3 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -48px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -48px -12px 0 -12px;
  }
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    margin-top: 48px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  box-sizing: border-box;
  overflow: hidden;
  border-style: solid;
  border-radius: 12px;
  border-width: 1px;
  border-color: #EBEBEB;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-5:hover:not(:disabled) {
  box-shadow: 0 2px 4px 0 rgba(40,41,61,0.04),0 8px 16px 0 rgba(96,97,112,0.16);
}

.emotion-6 {
  box-sizing: border-box;
  display: block;
  position: relative;
  margin-bottom: 0;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-6 {
    min-height: 1px;
  }
}

.emotion-7 {
  width: 100%;
}

.emotion-8 {
  border-radius: 8px;
  position: relative;
  width: 100%;
  padding-top: 66%;
  height: 0;
  border-radius: 8px;
  background-color: #F4F4F4;
}

.emotion-8 svg {
  fill: #BBC3C9;
}

.emotion-9 {
  top: 0;
  left: 0;
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  height: 100%;
  margin: 0;
}

.emotion-10 {
  display: none;
  height: auto;
  width: 100%;
  -webkit-animation: fadeIn 300ms;
  animation: fadeIn 300ms;
  border-radius: inherit;
}

.emotion-11 {
  box-sizing: border-box;
}

.emotion-12 {
  box-sizing: border-box;
  color: inherit;
  padding: 24px;
}

.emotion-12 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-13 {
  margin-bottom: 20px;
}

.emotion-14 {
  -webkit-text-decoration: none;
  text-decoration: none;
  border: none;
}

.emotion-14 .nk-headline-kicker {
  color: #577FFB;
}

.emotion-14:hover:not(:disabled) .nk-headline-kicker {
  color: #3358CC;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:active:not(:disabled) .nk-headline-kicker {
  color: #213A82;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-14:visited:not(:disabled) .nk-headline-kicker {
  color: #503B8C;
}

.emotion-14 .nk-headline-heading {
  color: #162740;
}

.emotion-14 .nk-headline-heading svg {
  fill: #162740;
}

.emotion-14:before {
  content: '';
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  overflow: hidden;
  position: absolute;
  z-index: 1;
}

.emotion-15 {
  font-family: 'Poppins',sans-serif;
  font-size: 24px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-15::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.30104166666666665em;
}

.emotion-15::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.44166666666666665em;
}

.emotion-16 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #162740;
}

.emotion-16 svg {
  fill: #162740;
}

.emotion-17 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-17 svg {
  fill: #555E74;
}

.emotion-17::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.415625em;
}

.emotion-17::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.446875em;
}

.emotion-19 {
  box-sizing: border-box;
  overflow: hidden;
  border-radius: 4px;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  transition-property: box-shadow;
  transition-duration: 300ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  height: 100%;
}

.emotion-21 {
  box-sizing: border-box;
  color: inherit;
  padding: 8px 4px;
}

.emotion-21 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                  >
                    <div
                      class="emotion-9"
                    />
                    <img
                      alt="Card Media"
                      class="emotion-10"
                      src="/static/placeholder-16x9.png"
                    />
                  </div>
                </div>
              </div>
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-12"
                >
                  <div
                    class="emotion-13"
                  >
                    <a
                      class="nk-card-link emotion-14"
                      href="/"
                    >
                      <section
                        class="emotion-15"
                      >
                        <h1
                          class="nk-headline-heading emotion-16"
                        />
                      </section>
                    </a>
                  </div>
                  <p
                    class="emotion-17"
                  >
                    interactive card
                  </p>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-4"
          >
            <div
              class="emotion-19"
            >
              <div
                class="emotion-11"
              >
                <div
                  class="emotion-21"
                >
                  <div
                    class="emotion-13"
                  >
                    <section
                      class="emotion-15"
                    >
                      <h1
                        class="nk-headline-heading emotion-16"
                      >
                        static
                      </h1>
                    </section>
                  </div>
                  <p
                    class="emotion-17"
                  >
                    card with optional title 
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Media List renders with usage cards 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-0 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-0 {
    margin-left: 8.333333333333334%;
    -webkit-flex-basis: 83.33333333333334%;
    -ms-flex-preferred-size: 83.33333333333334%;
    flex-basis: 83.33333333333334%;
    max-width: 83.33333333333334%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-0 {
    padding: 0 12px;
    margin-top: 24px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-0 {
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-2 {
  width: 100%;
  max-width: 1920px;
  margin: 0 auto;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

@media screen {
  .emotion-3 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 480px) {
  .emotion-3 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 768px) {
  .emotion-3 {
    margin: -48px -8px 0 -8px;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-3 {
    margin: -48px -12px 0 -12px;
  }
}

@media screen and (min-width: 1440px) {
  .emotion-3 {
    margin: -48px -12px 0 -12px;
  }
}

.emotion-4 {
  box-sizing: border-box;
  -webkit-background-clip: padding-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-4 {
    padding: 0 8px;
    margin-top: 48px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width: 768px) {
  .emotion-4 {
    -webkit-flex-basis: 33.333333333333336%;
    -ms-flex-preferred-size: 33.333333333333336%;
    flex-basis: 33.333333333333336%;
    max-width: 33.333333333333336%;
  }
}

@media screen and (min-width: 1024px) {
  .emotion-4 {
    padding: 0 12px;
  }
}

.emotion-5 {
  position: relative;
}

.emotion-6 {
  position: absolute;
  right: 16px;
  top: 16px;
  z-index: 1;
}

.emotion-7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #148F39;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-8 svg {
  width: 16px;
  height: 16px;
}

.emotion-8 svg {
  fill: #148F39;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-10 {
    max-width: 100%;
  }
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-11.emotion-11 {
  width: 32px;
  height: 32px;
  fill: #148F39;
}

.emotion-13 {
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-14 {
  box-sizing: border-box;
}

.emotion-15 {
  box-sizing: border-box;
  color: inherit;
  padding: 0;
}

.emotion-15 a:not(.nk-card-link) {
  z-index: 2;
  position: relative;
}

.emotion-16 {
  margin-bottom: 16px;
}

.emotion-17 {
  border-style: solid;
  border-color: #148F39;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-19 {
  font-family: 'Poppins',sans-serif;
  font-size: 24px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  padding: 1px 0px;
}

.emotion-19::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.30104166666666665em;
}

.emotion-19::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.44166666666666665em;
}

.emotion-20 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #148F39;
}

.emotion-20 svg {
  fill: #148F39;
}

.emotion-22 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 14px;
  line-height: 1.4285714285714286;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-22 svg {
  fill: #555E74;
}

.emotion-22::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: -0.3799107142857143em;
}

.emotion-22::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.4111607142857143em;
}

.emotion-27 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #D23F2D;
  background-color: #FFE8E5;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-27 svg {
  width: 16px;
  height: 16px;
}

.emotion-27 svg {
  fill: #D23F2D;
}

.emotion-30 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #D23F2D;
  vertical-align: unset;
  display: inline-block;
}

.emotion-30.emotion-30 {
  width: 32px;
  height: 32px;
  fill: #D23F2D;
}

.emotion-36 {
  border-style: solid;
  border-color: #D23F2D;
  border-width: 4px;
  border-radius: 4px;
  border-width: 0px;
  margin: 0;
  border-top-width: 4px;
  width: 100%;
}

.emotion-39 {
  display: inline;
  font: inherit;
  margin: 0;
  color: #D23F2D;
}

.emotion-39 svg {
  fill: #D23F2D;
}

<div
    class="emotion-0"
  >
    <div
      class="emotion-1"
    >
      <div
        class="emotion-2"
      >
        <div
          class="emotion-3"
        >
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-8"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-11 emotion-12"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-13"
              >
                <div
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                  >
                    <div
                      class="emotion-16"
                    >
                      <hr
                        aria-hidden="true"
                        class="emotion-17"
                        data-testid="divider"
                      />
                      <div
                        class="emotion-16"
                      />
                      <section
                        class="emotion-19"
                      >
                        <h1
                          class="nk-headline-heading emotion-20"
                        >
                          Do
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-16"
                    >
                      <p
                        class="emotion-22"
                      >
                        UsageCard Do
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="emotion-4"
          >
            <div
              class="emotion-5"
            >
              <div
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                >
                  <div
                    class="emotion-27"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-9"
                    >
                      <div
                        class="emotion-10"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-30 emotion-12"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="emotion-13"
              >
                <div
                  class="emotion-14"
                >
                  <div
                    class="emotion-15"
                  >
                    <div
                      class="emotion-16"
                    >
                      <hr
                        aria-hidden="true"
                        class="emotion-36"
                        data-testid="divider"
                      />
                      <div
                        class="emotion-16"
                      />
                      <section
                        class="emotion-19"
                      >
                        <h1
                          class="nk-headline-heading emotion-39"
                        >
                          Do not
                        </h1>
                      </section>
                    </div>
                    <div
                      class="emotion-16"
                    >
                      <p
                        class="emotion-22"
                      >
                        UsageCard Dont
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
